2002-06-08  Roland McGrath  <roland@frob.com>

	* inode.c (diskfs_cached_lookup): Use ino_t for argument.

2002-05-08  Roland McGrath  <roland@frob.com>

	* rr.c (rrip_work): Cast pointer to uintptr_t instead of int.

	* main.c (diskfs_append_args): unsigned -> size_t
	* lookup.c (diskfs_get_directs): Likewise.

2001-04-30  Marcus Brinkmann  <marcus@gnu.org>

	* rr.c (rrip_work): In the MATCH_NAME case, free NMBUF if it is
	non-zero before returning.

2001-04-29  Marcus Brinkmann  <marcus@gnu.org>

	* lookup.c (diskfs_get_directs): If an RE entry is encountered,
	just decrement I again. Rearrange the code to check for a new
	logical sector in any case. Also make sure to always release RR
	before returning. This fixes some memory leaks and Debian bug
	report #63373.

2001-02-25  Roland McGrath  <roland@frob.com>

	* lookup.c: Include <stdlib.h> for abort decl.

2001-02-20  Marcus Brinkmann  <marcus@gnu.org>

	* inode.c: Include <time.h>. Reported by Arkadi E. Shishlov
	<arkadi@it.lv>.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* lookup.c: Make diskfs_dirstat_size const.

2000-12-21  Marcus Brinkmann  <marcus@gnu.org>

	* rr.c (rrip_work): Use strdup instead malloc and strcpy.
	Assert that strdup and malloc (for rr->trans) succeeds.
	* pager.c: Include <errno.h>.
	(create_disk_pager): If malloc fails, exit with error.
	* main.c (read_sblock): Fail if malloc does.
	* inode.c (diskfs_cached_lookup): When allocating memory for dn or
	np fails, release spinlock, rrip (and allocated memory) and return
	ENOMEM.
	(load_inode): Likewise (but no rrip). Also, if *npp is non-zero,
	release diskfs_node_refcnt_lock before returning.
	Reported by Igor Khavkine <i_khavki@alcor.concordia.ca>.

2000-11-27  Marcus Brinkmann  <marcus@gnu.org>

	The last two changes introduced two new inode overlaps
	(file_start was not shifted by store block size, and directories'
	shifted file_start offset can be the same as the struct dirrect
	offset of their first directory entry).
